<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="407dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cruz"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:contentDescription="cerrar pop up"
            android:padding="8dp"
            android:src="@drawable/cross" />

        <TextView
            android:id="@+id/filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:text="@string/filters"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="657dp"
        android:background="@drawable/pop_up_background"
        android:elevation="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/eggs"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/eggs"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/noodles"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/noodles_pasta"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/chips_crisps"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/fastFood"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/fast_food"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/categories2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/individual_collection"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cocola"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/cocola"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ifad"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/ifad"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/kazi"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/kazi_farmas"
            android:textSize="16sp" />

        <Button
            android:id="@+id/filter"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:fontFamily="@font/inter_bold"
            android:text="@string/apply_filter"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>