<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34070707">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="544dp"
        android:background="@drawable/pop_up_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:clickable="true">

            <ImageView
                android:id="@+id/cruz"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="cerrar pop up"
                android:padding="8dp"
                android:src="@drawable/cross" />
        </FrameLayout>

        <ImageView
            android:id="@+id/img_error"
            android:layout_width="222.35dp"
            android:layout_height="221.85dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/order_failed"
            android:src="@drawable/img_error" />

        <TextView
            android:id="@+id/opps"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/order_failed"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:textSize="28sp" />

        <TextView
            android:id="@+id/smth_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/smth_wrong"
            android:textAlignment="center"
            tools:textSize="16sp" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:fontFamily="@font/inter_bold"
            android:text="@string/try_again"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/back_home2"
            android:layout_width="292dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contextClickable="true"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/back_home"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>