<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/back_home"
        android:layout_width="182dp"
        android:layout_height="22dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:contextClickable="true"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/back_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:textSize="16sp" />

    <Button
        android:id="@+id/button_track_order"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/track_order"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/on_its_way"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="81dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/on_its_way"
        android:textAlignment="center"
        android:textColor="#7C7C7C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763"
        tools:textSize="16sp" />

    <TextView
        android:id="@+id/order_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="81dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/order_accepted"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633"
        tools:textSize="28sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="269.08dp"
        android:layout_height="240.31dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="435dp"
        android:src="@drawable/order_accepted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>