<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onbording" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="287dp"
        android:layout_height="124dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="start"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        tools:textSize="48sp" />

    <TextView
        android:id="@+id/abajo"
        android:layout_width="342dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="start"
        android:text="@string/abajo_welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/button"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:layout_constraintWidth="match_parent"
        tools:textSize="16sp" />
</androidx.constraintlayout.widget.ConstraintLayout>